ros2_ws_lab_1/log/build_2025-04-15_12-05-46/prueba_5/stderr.log
  File "/home/paulo/universidad/5to_semestre/robotica_movil/ros2_ws_lab_1/install/prueba_5/lib/python3.10/site-packages/prueba_5/pose_loader.py", line 22
    ', 'r') as file:
        ^
SyntaxError: unterminated string literal (detected at line 22)

